--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -877,6 +877,7 @@ main {
 .filter-list { display: none; }
 
 .filter-select-box {
+  display: none !important;
   position: relative;
   margin-bottom: 25px;
 }
